6.3 cleanup